Fixed ellipses no wrap

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -26,9 +26,11 @@
     line-height: 48px;
     font-weight: 500;
     margin: 0 0 7px;
+    max-width: 375px;
     grid-area: name;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .profile__title {
@@ -38,6 +40,7 @@
     font-weight: 400;
     margin: 0;
     grid-area: title;
+    max-width: 375px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
@@ -99,6 +102,7 @@
         font-size: 22px;
         line-height: 27px;
         margin: 0;
+        max-width: 220px;
     }
 
     .profile__title {
@@ -106,6 +110,7 @@
         line-height: 17px;
         margin: 14px auto 0;
         text-align: center;
+        max-width: 282px;
     }
 
     .profile__edit-button {
